--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -8,11 +8,11 @@ After=network.target
 User=ubuntu
 # Set working directory
 WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
-# Start Gunicorn with 3 workers, binding to 0.0.0.0:5003
-ExecStart=gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app
+# Start Gunicorn with 3 workers, binding to 0.0.0.0:5003, log errors to /tmp/airbnb-error.log
+ExecStart=gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app --error-logfile /tmp/airbnb-error.log
 # Restart the service if it fails
 Restart=always
-# Redirect standard output to syslog
+# Redirect standard output to system log
 StandardOutput=append:/tmp/airbnb-access.log
 # Redirect standard error to syslog
 StandardError=append:/tmp/airbnb-error.log
